name:           hscharm
version:        0.0.2
category:       GUI
synopsis:       minimal ncurses-like library
description:    A basic ncurses-like library for simple terminal graphics
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
type:     git
location: https://github.com/mcandre/hscharm.git

library
    build-depends:
        base >= 4.3.1.0 && < 5

    exposed-modules: HsCharm

    ghc-options: -Wall -fwarn-tabs
    hs-source-dirs: src
    c-sources: charm/lib/charm.c
    install-includes: charm/lib/charm.h

executable hellocharm
    build-depends:
        base >= 4.3.1.0 && < 5

    other-modules: HsCharm

    ghc-options: -Wall -fwarn-tabs
    main-is: HelloCharm.hs
    hs-source-dirs: src
    c-sources: charm/lib/charm.c
    install-includes: charm/lib/charm.h

executable rl
    build-depends:
        base           >= 4.3.1.0 && < 5,
        random         >= 1.1 && < 2,
        random-shuffle >= 0.0.4 && < 0.0.5

    other-modules: HsCharm

    ghc-options: -Wall -fwarn-tabs
    main-is: RL.hs
    hs-source-dirs: src
    c-sources: charm/lib/charm.c
    install-includes: charm/lib/charm.h

executable ddr
    build-depends:
        base           >= 4.3.1.0 && < 5,
        random         >= 1.1 && < 2,
        random-shuffle >= 0.0.4 && < 0.0.5

    other-modules: HsCharm

    ghc-options: -Wall -fwarn-tabs
    main-is: DDR.hs
    hs-source-dirs: src
    c-sources: charm/lib/charm.c
    install-includes: charm/lib/charm.h

test-suite reference
    build-depends:
        base                        >= 4.3.1.0 && < 5,
        hlint                       >= 2.1.10 && < 3,
        shake                       >= 0.16.4 && < 0.17

    ghc-options:        -Wall -fwarn-tabs
    hs-source-dirs:     src
    main-is:            HelloCharm.hs
    type:               exitcode-stdio-1.0
